--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -1,5 +1,6 @@
 global
-  log 127.0.0.1 local0 info
+  log stdout local0 info
+  master-worker
   maxconn 512
   tune.ssl.default-dh-param 2048
 
@@ -24,10 +25,10 @@ frontend http
 
 
 frontend https
-  bind 0.0.0.0:443 ssl crt /etc/ssl/private/@CERT_FILE@
-  reqadd X-Forwarded-Proto:\ https
+  bind 0.0.0.0:443 ssl crt ${CERTIFICATE_CHAIN_PATH}
+  http-request add-header X-Forwarded-Proto https
   default_backend web
 
 
 backend web
-  server web @BACKEND_HOST@:@BACKEND_PORT@
+  server web ${BACKEND_ADDRESS}
